[package]
name = "dmcfe"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmian_bls12_381 = {git = "https://github.com/Cosmian/bls12_381.git", branch = "add_gt_hash"}
rand = "0.8.4"
sha2 = "0.9.5"
eyre = "0.6.5"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "ipfe"
harness = false

[[bench]]
name = "ipmcfe"
harness = false

[[bench]]
name = "ipdmcfe"
harness = false
