[package]
name = "dmcfe"
version = "0.1.1"
edition = "2021"
authors = [
  "Théophile Brezot <theophile.brezot@cosmian.com>",
]
description = "Different flavors of functional encryption"
license = "MIT/Apache-2.0"
repository = "https://github.com/Cosmian/DMCFE"

[dependencies]
cosmian_bls12_381 = {git = "https://github.com/Cosmian/bls12_381.git", branch = "add_gt_hash"}
sha2 = "0.9"
eyre = "0.6"
rand_core = "0.6"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "ipfe"
harness = false

[[bench]]
name = "ipmcfe"
harness = false

[[bench]]
name = "ipdmcfe"
harness = false
