[package]
name = "cosmian_mcfe"
version = "0.2.0"
authors = ["Bruno Grieder <bruno.grieder@cosmian.com>"]
edition = "2018"

[lib]
name = "cosmian_mcfe"
path = "src/lib.rs"

[[bin]]
name = "cosmian_mcfe"
path = "src/main.rs"

[dependencies]
anyhow = { package = "eyre", version = "0.6.0" }
cosmian_crypto_base = "0.1"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
rand_hc = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
